--- a/package.json
+++ b/package.json
@@ -3,10 +3,15 @@
   "version": "1.0.0",
   "description": "Proyecto del Curso Profesional de JavaScript de la Escuela de JavaScript",
   "main": "index.js",
-  "scripts": {},
+  "scripts": {
+    "start": "live-server"
+  },
   "keywords": [
     "platzi"
   ],
   "author": "Luis Alberto Parra Pulido <luis.parra.pulido@gmail.com>",
-  "license": "MIT"
+  "license": "MIT",
+  "devDependencies": {
+    "live-server": "^1.2.1"
+  }
 }
