--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Proyecto del Curso Profesional de JavaScript de la Escuela de JavaScript",
   "main": "index.js",
   "scripts": {
-    "start": "live-server"
+    "start": "parcel index.html ejercicios/index.html ejercicios/**/*.html"
   },
   "keywords": [
     "platzi"
@@ -12,6 +12,10 @@
   "author": "Luis Alberto Parra Pulido <luis.parra.pulido@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "live-server": "^1.2.1"
-  }
+    "parcel-bundler": "^1.12.3",
+    "typescript": "^3.6.2"
+  },
+  "browserslist": [
+    "last 1 Chrome version"
+  ]
 }
